<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        >

        <TextView android:text="@string/app_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:id="@+id/app_header_textview"
            android:textColor="#549488"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_spotify_streamer"
            android:id="@+id/button_spotify_streamer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:onClick="displayToastMessage"
            android:tag="@string/tag_spotify_streamer"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"

            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_scores_app"
            android:id="@+id/button_scores_app"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:onClick="displayToastMessage"
            android:layout_below="@id/button_spotify_streamer"
            android:layout_centerHorizontal="true"
            android:tag="@string/tag_scores_app"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_library_app"
            android:id="@+id/button_library_app"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:layout_below="@id/button_scores_app"
            android:onClick="displayToastMessage"
            android:tag="@string/tag_library_app"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_built_it_bigger"
            android:id="@+id/button_built_it_bigger"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:layout_below="@+id/button_library_app"
            android:onClick="displayToastMessage"
            android:tag="@string/tag_built_it_bigger"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_xyz_reader"
            android:id="@+id/button_xyz_reader"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:layout_below="@id/button_built_it_bigger"
            android:onClick="displayToastMessage"
            android:tag="@string/tag_xyz_reader"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_my_own_app"
            android:id="@+id/button_my_own_app"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/button_left_padding"
            android:paddingRight="@dimen/button_right_padding"
            android:paddingTop="@dimen/button_top_padding"
            android:paddingBottom="@dimen/button_bottom_padding"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:textColor="@color/orange"
            android:layout_below="@id/button_xyz_reader"
            android:onClick="displayToastMessage"
            android:tag="my own app"
            android:layout_marginBottom="@dimen/button_layout_margin"
            android:background="#549488"/>
    </RelativeLayout>
</ScrollView>

